feat: set up database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=garden
 spring.jpa.show-sql=true
 logging.level.root=ERROR
+spring.datasource.url=jdbc:sqlserver://localhost;encrypt=true;trustServerCertificate=true;databaseName=GARDEN
+spring.datasource.username=sa
+spring.datasource.password=Pa$$w0rd
+spring.jpa.hibernate.ddl-auto=create
