--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
